    Z drive are now categorized into directories, with
    addition of some files/programs, such as additional
    4DOS files, text utilties in TEXTUTIL directory and
    TITLE command to change window title. (Wengier)
  - CHCP command in the Truetype font (TTF) output now
    allows code page 932, 936, 949, and 950 to display
    Chinese, Japanese and Korean characters and file
    names with DBCS enabled in non-PC98 mode. (Wengier)
  - Command-line option -fastlaunch will now suppress
    messages by "automountall=true" option. (Wengier)
  - The return value of AL in Int21/AX=0Eh is no longer
    fixed. The game Jurassic Park may run after moving
    Z drive to a different letter (e.g. E:). (Wengier)
  - Added "Change current floppy image..." and "Change
    current CD image..." menu options to change the
    currently active floppy disk image(s) on drive A: &
    B: and ISO/CUE image(s) on CD drives respectively.
    This makes it possible to change the active floppy
    disk and/or CD images while a guest system (e.g.
    Windows 9x) is currently running. (Wengier)
  - Added "Restart DOSBox-X with config file..." menu
    option to start DOSBox-X with the specified config
    file automatically from the menu. (Wengier)
  - Added "Refresh rate..." menu option (under "Video")
    to set the video refresh rate. (Wengier)
  - Added "Enable A20 gate" menu option (under "DOS")
    to enable or disable the A20 gate. (Wengier)
  - Added "maximize" config option in [sdl] section to
    automatically maximize the DOSBox-X window at start
    (SDL2 and Windows SDL1 builds only). (Wengier)
  - Added "debuggerrun" config option in [log] section
    to set the run mode when DOSBox-X Debugger starts.
    You can now also switch them from the menu ("Help"
    => "Debugging options" => "Debugger option: ..."),
    including "debugger", "normal" & "watch". Also, the
    built-in DEBUGBOX command without a parameter will
    start the DOSBox-X debugger. (Wengier)